# mussia33

./: .gitignore  .gitmodules  .prettierrc  .teller.yml  Cargo.toml  Dockerfile  README.md  Taskfile.yaml  Tiltfile  alina.ts  app.yaml  apps.Dockerfile  bun.lockb  cloudbuild.yaml  compose.yaml  default.conf  devbox.json  go.mod  go.sum  justfile  kubeconfig  kuttl-test.yaml  nx.json  package.json  pnpm-lock.yaml  rust.Dockerfile  skaffold.yaml  tsconfig.base.json  vite.config.ts  wapm.toml  werf.yaml
apps/rust/actix_api/: Cargo.toml  project.json
apps/rust/actix_api/src/: main.rs
apps/rust/actix_api/static/: index.html
apps/rust/actix_app/: Cargo.toml  Dockerfile  Tiltfile  project.json
apps/rust/actix_app/k8s/base/: deployment.yml  service-account.yaml  service.yml
apps/rust/actix_app/src/: main.rs  swagger.rs  todo.rs
apps/rust/actix_app/src/mongo/: generic_macro.rs  mod.rs  repository.rs  serialize.rs
apps/rust/actix_app/src/product/: handlers.rs  mod.rs  model.rs
apps/rust/actix_app/src/user/: handlers.rs  mod.rs  model.rs  router.rs
apps/rust/actix_htmx/: Cargo.toml  project.json
apps/rust/actix_htmx/src/: main.rs
apps/rust/actix_sql/: Cargo.toml  README.md  Taskfile.yaml  project.json
apps/rust/actix_sql/migrations/: 0001_books_table.sql  0002_foundation.sql
apps/rust/actix_sql/queries/: get_users.sql
apps/rust/actix_sql/src/: generic.rs  main.rs  routes.rs  store.rs  swagger.rs
apps/rust/actix_sql/src/books/: configure.rs  handlers.rs  mod.rs  model.rs
apps/rust/actix_sql/src/extractors/: auth.rs
apps/rust/actix_sql/src/todos/: configure.rs  handlers.rs  mod.rs  model.rs
apps/rust/actix_sql/src/users/: configure.rs  handlers.rs  mod.rs  model.rs
apps/rust/axum_app/: Cargo.toml  Tiltfile  project.json
apps/rust/axum_app/k8s/base/: deployment.yml  service-account.yaml  service.yml
apps/rust/axum_app/src/: main.rs  todo.rs
apps/rust/axum_htmx/: Cargo.toml  project.json
apps/rust/axum_htmx/src/: main.rs
apps/rust/clapper/: Cargo.toml  Tiltfile  project.json
apps/rust/clapper/k8s/base/: job.yaml  kustomization.yml
apps/rust/clapper/src/: main.rs
apps/rust/clapper/src/commands/: cluster.rs  mod.rs  subcommand.rs  system.rs  users.rs
apps/rust/cli_app/: Cargo.toml  project.json
apps/rust/cli_app/src/: main.rs  project.rs
apps/rust/filter_members/: Cargo.toml  project.json
apps/rust/filter_members/src/: main.rs
apps/rust/job_operator_sample/: Cargo.toml  project.json
apps/rust/job_operator_sample/src/: main.rs
apps/rust/master_operator/: Cargo.toml  Dockerfile  Tiltfile  project.json
apps/rust/master_operator/k8s/: topology.yaml
apps/rust/master_operator/k8s/base/: deployment.yml  kustomization.yml  rbac.yaml  service-account.yaml  service.yml
apps/rust/master_operator/src/: crd.rs  echo.rs  main.rs
apps/rust/mongo-api/: Cargo.toml  Tiltfile  project.json
apps/rust/mongo-api/k8s/base/: deployment.yml  service-account.yaml  service.yml
apps/rust/mongo-api/src/: main.rs
apps/rust/ntex_app/: Cargo.toml  Tiltfile  project.json
apps/rust/ntex_app/k8s/base/: deployment.yml  kustomization.yml  service-account.yaml  service.yml
apps/rust/ntex_app/src/: main.rs
apps/rust/ntex_app/src/project/: config.rs  handlers.rs  model.rs
apps/rust/ntex_app/src/shared/: app_state.rs  mod.rs  validation.rs
apps/rust/ntex_app/src/users/: config.rs  handlers.rs  mod.rs  model.rs
apps/rust/ntex_app/src/users_mongo/: config.rs  handlers.rs  mod.rs  model.rs
apps/rust/ntex_redis/: Cargo.toml  project.json
apps/rust/ntex_redis/src/: app_state.rs  main.rs
apps/rust/salvo_app/: Cargo.toml  Tiltfile  project.json
apps/rust/salvo_app/k8s/base/: deployment.yml  service-account.yaml  service.yml
apps/rust/salvo_app/src/: main.rs
apps/rust/salvo_app/src/author/: handlers.rs  mod.rs  model.rs  router.rs
apps/rust/salvo_app/src/users/: configure.rs  handlers.rs  model.rs
apps/rust/test_app/: Cargo.toml  project.json
apps/rust/test_app/src/: main.rs
libs/rust/author_api/: Cargo.toml  project.json
libs/rust/author_api/src/: controller.rs  lib.rs  model.rs  router.rs
libs/rust/author_api/src/author/: controller.rs  mod.rs  model.rs  router.rs
libs/rust/author_api/src/dto/: create.rs  mod.rs  query_params.rs
libs/rust/books_api/: Cargo.toml  project.json
libs/rust/books_api/src/: handlers.rs  lib.rs  model.rs  router.rs
libs/rust/books_api/src/dto/: mod.rs  query_params.rs  update.rs
libs/rust/for_fun/: Cargo.toml  project.json
libs/rust/for_fun/src/: lib.rs
libs/rust/generic_api/: Cargo.toml  project.json
libs/rust/generic_api/src/: actions.rs  errors.rs  lib.rs  mongo_id.rs  mongo_service.rs  router.rs
libs/rust/mongo/: Cargo.toml  project.json
libs/rust/mongo/src/: errors.rs  handlers.rs  id.rs  lib.rs  repository.rs  router.rs
libs/rust/proc_macros/db-resource/: Cargo.toml
libs/rust/proc_macros/db-resource/src/: lib.rs
libs/rust/proc_macros/db-resource/tests/: 01-parse.rs
libs/rust/proc_macros/mongo-resource-derive/: Cargo.toml
libs/rust/proc_macros/mongo-resource-derive/src/: lib.rs
libs/rust/proc_macros/mongo-resource-derive/tests/: parse.rs  progress.rs
libs/rust/proc_macros/reflective/: Cargo.toml
libs/rust/proc_macros/reflective/src/: lib.rs
libs/rust/proc_macros/reflective/tests/: 01-parse.rs
libs/rust/projects/: Cargo.toml  project.json
libs/rust/projects/src/: config.rs  handlers.rs  lib.rs  model.rs
libs/rust/servers_shared/: Cargo.toml  project.json
libs/rust/servers_shared/src/: cors.rs  crypto.rs  envs.rs  handlers.rs  lib.rs  logger.rs  sql.rs  swagger.rs
libs/rust/stam/: Cargo.toml  project.json
libs/rust/ts_shared/: Cargo.toml  index.d.ts  index.js  package.json  project.json
libs/rust/ts_shared/npm/darwin-arm64/: README.md  package.json
libs/rust/ts_shared/npm/darwin-x64/: README.md  package.json
libs/rust/ts_shared/npm/freebsd-x64/: README.md  package.json
libs/rust/ts_shared/npm/linux-arm-gnueabihf/: README.md  package.json
libs/rust/ts_shared/npm/linux-arm64-gnu/: README.md  package.json
libs/rust/ts_shared/src/: lib.rs
(+917 files in other folders)
