[workspace]
members = [
    'libs/rust/grpc',
    'libs/rust/mongo',
    'apps/rust/mongo-api',
    'apps/rust/master_operator',
    'apps/rust/actix_app',
    'apps/rust/clapper',
    'apps/rust/actix_htmx',
    'apps/rust/axum_htmx',
    'apps/rust/axum_app',
    'apps/rust/test_app',
    'libs/rust/servers_shared',
    'libs/rust/napi_shared',
    'libs/rust/generic_api',
    'libs/rust/books_api',
    'libs/rust/author_api',
    'apps/rust/actix_sql',
    'apps/rust/actix_orm',
    'libs/rust/macros',
    'libs/rust/proc_macros',
    'apps/rust/filter_members',
    'apps/rust/salvo_app',
    'apps/rust/ntex_app',
    'libs/rust/shared_ntex',
    'apps/rust/ntex_redis',
]
resolver = '2'

[workspace.dependencies]
actix-rt = '2.9'
actix-web = '4.5'
actix-cors = '0.7'
async-trait = { version = '0.1' }
anyhow = '1.0'
clap = { version = '4.5', features = ['derive'] }
env_logger = '0.11'
futures = '0.3'
futures-util = '0.3'
log = '0.4'
mongodb = '2.8'
plurals = '0.4'
kube = { version = '0.88', features = ['runtime', 'derive'] }
k8s-openapi = { version = '0.21', features = ['latest'] }
sqlx = { version = '0.7', default-features = false, features = ['postgres', 'runtime-tokio-rustls', 'macros', 'uuid', 'chrono'] }
rust_proc_macros = { path = 'libs/rust/proc_macros' }
rust_books_api = { path = 'libs/rust/books_api' }
rust_author_api = { path = 'libs/rust/author_api' }
rust_napi_shared = { path = 'libs/rust/napi_shared' }
rust_servers_shared = { path = 'libs/rust/servers_shared' }
rust_generic_api = { path = 'libs/rust/generic_api' }
schemars = '0.8'
serde = { version = '1.0', features = ['derive'] }
serde_json = { version = '1.0', features = ['arbitrary_precision'] }
serde_derive = '1.0'
serde_yaml = '0.9'
thiserror = '1.0'
tokio = { version = '1.36', features = ['macros', 'signal', 'rt-multi-thread'] }
ts-rs = { version = '7.1', features = ['serde-compat'] }
utoipa = { version = '4.2', features = ['actix_extras'] }
utoipa-swagger-ui = { version = '6.0', features = ['actix-web'] }
validator = { version = '0.17', features = ['derive'] }
tracing = '0.1'
tracing-subscriber = '0.3'
syn = '2.0'
quote = '1.0'
pluralizer = '0.4'
trybuild = { version = '1.0', features = ['diff'] }

[profile.release]
lto = true
strip = true
opt-level = 3
