[package]
name = "rust_actix_app"
version = "0.1.0"
edition = "2021"


[dependencies]
#mongo = { path = "../../../libs/rust/mongo" }
async-trait = { version = "0.1" }
actix-web = "4.4"
mongodb = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
env_logger = "0.10"
log = "0.4"
futures = "0.3"
utoipa = { version = "3.5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1", features = ["actix-web"] }
validator = { version = "0.16", features = ["derive"] }
actix-cors = "0.6"
plurals = "0.4"
ts-rs = { version = "7.0", features = ["serde-compat"] }
serde_derive = "1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
