[package]
name = "rust_actix_app"
version = "0.1.0"
edition = "2021"


[dependencies]
#mongo = { path = "../../../libs/rust/mongo" }
rust_author_api = { workspace = true }
rust_books_api = { workspace = true }
rust_generic_api = { workspace = true }
rust_servers_shared = { workspace = true }
actix-cors = { workspace = true }
actix-web = { workspace = true }
async-trait = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
validator = { workspace = true }
ts-rs = { workspace = true }

# todo remove this
plurals = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
