[package]
name = "rust_actix_htmx"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
actix-rt = { workspace = true }
serde_json = { workspace = true }
#env_logger = "0.10.0"
#log = "0.4"
#futures = "0.3"
#google-cloud-pubsub = "0.21"
#google-cloud-googleapis = "0.8.0"
#google-cloud-gax = "0.16"
#google-cloud-default = "0.4"
serde_derive = { workspace = true }
futures-util = { workspace = true }
#tokio-util = "0.7.8"
tokio = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
