[package]
name = "rust_actix_sql"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
rust_servers_shared = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.scripts]
shit = "docker images"

[profile.dev.package.sqlx-macros]
opt-level = 3
