[package]
name = "rust_actix_sql"
version = "0.1.0"
edition = "2021"


[dependencies]
mongo = { path = "../../../libs/rust/mongo" }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
rust_servers_shared = { workspace = true }
rust_proc_macros = { workspace = true }
log = { workspace = true }
utoipa = { workspace = true }
futures = { workspace = true }
utoipa-swagger-ui = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.scripts]
shit = "docker images"

[profile.dev.package.sqlx-macros]
opt-level = 3
