[package]
name = "rust_actix_sql"
version = "0.1.0"
edition = "2021"


[dependencies]
mongo = { path = "../../../libs/rust/mongo" }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
rust_servers_shared = { workspace = true }
rust_proc_macros = { workspace = true }
log = { workspace = true }
utoipa = { workspace = true }
futures = { workspace = true }
utoipa-swagger-ui = { workspace = true }
validator = { workspace = true }
uuid = { version = "1.6.1", features = ["serde", "v4", "js"] }
chrono = {version = "0.4.31", features = ["serde"] }
jsonwebtoken = { version = "9.1.0" }
#argonautica = "0.2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.scripts]
shit = "docker images"
sql = "psql -h localhost -p 5432 -d mydatabase -U myuser -W mypassword"

[profile.dev.package.sqlx-macros]
opt-level = 3
