[package]
name = "rust_axum_app"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { workspace = true }
axum = { version = "0.6" }
rust_servers_shared = { path = "../../../libs/rust/servers_shared" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
