[package]
name = "rust_axum_htmx"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
listenfd = "1.0.1"
axum = {version = "0.6.20", features = ["macros"]}
axum-extra = "0.7.7"
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
diesel = { version = "2", features = ["postgres"] }
diesel_migrations = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
