[package]
name = "rust_axum_htmx"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
listenfd = "1.0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
