[package]
name = "rust_clapper"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.4", features = ["derive"] }
#k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
#kube = { version = "0.83.0", features = ["derive", "runtime"] }
serde = "1.0"
serde_json = "1.0"
futures = {version = "0.3", features = []}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
