[package]
name = "rust_clapper"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { workspace = true }
#k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
#kube = { version = "0.83.0", features = ["derive", "runtime"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures = {version = "0.3", features = []}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
