[package]
name = "rust_cli_app"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { workspace = true, features = ["derive"] }
actix-web = { workspace = true, features = [] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
