[package]
name = "rust_filter_members"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { workspace = true }
toml = { version = "0.8", features = ["parse"] }
serde = { workspace = true }
colored = "2.0"
tempfile = "3.10"
anyhow = "1.0"
thiserror = { version = "1.0" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
