[package]
name = "rust_job_operator_sample"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
backoff = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
log = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
