[package]
name = "rust_master_operator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
backoff = "0.4.0"
clap = { version = "4.4.3", features = ["derive"] }
futures = "0.3.28"
k8s-openapi = { version = "0.18.0", features = ["v1_25"] }
kube = { version = "0.83.0", features = ["derive", "runtime"] }
log = "0.4.20"
schemars = "0.8.13"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.106"
serde_yaml = "0.9.25"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "signal", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
