[package]
name = "rust_master_operator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
backoff = "0.4.0"
clap = { workspace = true }
futures = "0.3.28"
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["latest"] }
log = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.27"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
