[package]
name = "rust_ntex_app"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1"
rust_proc_macros = { workspace = true }
rust_servers_shared = { workspace = true }
ntex = { version = "1.0", features = ["tokio"] }
futures = "0.3"
env_logger = "0.11.2"
mongodb = { version = "2.8", features = ["default"] }
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
utoipa-redoc = { version = "3.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "3.0", features = ["actix-web"] }
bb8-redis = { version = "0.14" }
redis = { version = "0.24", features = ["serde", "serde_json", "async-trait"] }
bb8 = { version = "0.8", features = ["default"] }
uuid = { version = "1.7", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { workspace = true }
tokio = { version = "1", features = ["full"] }
validator = { workspace = true }
argon2 = "0.5"
rand = "0.8"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
