[package]
name = "rust_ntex_redis"
version = "0.1.0"
edition = "2021"


[dependencies]
ntex = { version = "1.0", features = ["tokio"] }
env_logger = "0.11.2"
bb8-redis = { version = "0.14" }
redis = { version = "0.24", features = ["serde", "serde_json", "async-trait"] }
bb8 = { version = "0.8", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8", features = ["default"] }
log = "0.4.20"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
