[package]
name = "rust_salvo_app"
version = "0.1.0"
edition = "2021"


[dependencies]

salvo = { version = "0.58.3", features = ["caching-headers", "compression", "oapi"] }
tokio = { version = "1.33.0", features = ["macros"] }
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
