[package]
name = "rust_salvo_app"
version = "0.1.0"
edition = "2021"


[dependencies]

salvo = { version = "0.66", features = ["caching-headers", "compression", "oapi", "logging"] }
tokio = { version = "1.37", features = ["macros"] }
rust_generic_api.workspace = true
rust_servers_shared.workspace = true
rust_proc_macros.workspace = true
mongodb.workspace = true
ts-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
uuid = { version = "1.7", features = ["serde", "v4", "js"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "9.2" }
log = { workspace = true }
sqlx = { workspace = true }
once_cell = { version = "1.19" }
futures = { workspace = true }
