[package]
name = "rust_test_app"
version = "0.1.0"
edition = "2021"


[dependencies]
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_macros = { workspace = true }
rust_proc_macros = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
