[package]
name = "rust_test_app"
version = "0.1.0"
edition = "2021"


[dependencies]
rayon = "1.8"
rust_proc_macros = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
syrette = "0.5.1"
tokio = { workspace = true, features = ["full"] }
reqwest = {version = "0.11.22", features = ["json"]}