[package]
name = "rust_for_fun"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { worspace = true, features = ["derive"] }
serde = { worspace = true }
cpuid = "0.1.1"
#clap = { version = "4.4", features = ["derive"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
