[package]
name = "rust_generic_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
mongodb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
ts-rs = { workspace = true }
utoipa = { workspace = true }
plurals = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
