[package]
name = "mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
mongodb = "2.6.1"
serde = "1.0"
async-trait = { version = "0.1.73" }
futures = "0.3.28"
ts-rs = { workspace = true }
utoipa = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }