[package]
name = "rust_projects"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
mongodb = { workspace = true }
mongo = { workspace = true }
plurals = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
futures = { workspace = true }
validator = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
