[package]
name = "rust_servers_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
actix-cors = { workspace = true }
env_logger = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
mongo = { path = "../mongo" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
