
[package]
name = 'rust_ts_shared'
version = '0.1.0'
edition = '2021'

[dependencies]
napi = { version = '2.10.2', default-features = false, features = [
	'napi4',
] }
napi-derive = '2.9.3'
clap = { version = "4.4", features = ["derive"] }
cpuid = "0.1.1"
serde = { worspace = true }
utoipa = { worspace = true }
[lib]
crate-type = [
	'cdylib',
]

[build-dependencies]
napi-build = '2.0.1'
