[package]
name = "mongo-resource-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[test]]
#name = "tests"
#path = "tests/progress.rs"

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
pluralizer = "0.4"
#proc-macro2 = "1.0"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }